change font-face files and correct css styles.

--- a/scss/modules/mixins.scss
+++ b/scss/modules/mixins.scss
@@ -8,8 +8,9 @@
     flex-wrap: $wrapProp;
 }
 
-@mixin text-styles ($size, $color) {
+@mixin text-styles ($size, $family, $color) {
     font-size: $size;
+    font-family: $family;
     color: $color;
 }
 
