--- a/scss/page/footer.scss
+++ b/scss/page/footer.scss
@@ -14,15 +14,13 @@
     }
     .footer-logo{
         h4{
-            font-family: 'Avenir LT Pro Book';
-            @include text-styles(16px, $black_color);
+            @include text-styles(16px, 'AvenirBook', $black_color);
             @media screen and (max-width: 360px) {
                 font-size: 8px;
             }
         }
         span{
-            font-family: 'Avenir LT Pro 65 Black';
-            @include text-styles(16px, $black_color);
+            @include text-styles(16px, 'AvenirBlack', $black_color);
             @media screen and (max-width: 360px) {
                 font-size: 8px;
             }
