--- a/scss/page/list-box.scss
+++ b/scss/page/list-box.scss
@@ -1,16 +1,20 @@
-.listBox-mainDiv{
-    justify-content: space-between;
+.list-section{
+    @media screen and (max-width: 1080px) {
+        margin-top: 20px;
+    }
+    .listBox-mainDiv{
+    @include horizontal (space-between);
     padding: 70px 0;
     border-bottom: 1px solid gray;
     @media screen and (max-width: 1080px) {
-        justify-content: center;
+        @include horizontal (center);
     }
     @media screen and (max-width: 640px) {
         flex-direction: column;
     }
     .list-box{
         @media screen and (max-width: 640px) {
-            justify-content: center;
+            @include horizontal (center);
         }
         img{
             display: none;
@@ -39,19 +43,16 @@
                 display: none;
             }
             h6{
-                font-family: 'Avenir LT Pro 55 Heavy';
-                @include text-styles (16px, $black_color);
+                @include text-styles (16px, 'AvenirHeavy', $black_color);
                 margin-bottom: 40px;
             }
             .list-box-a{
-                font-family: 'Avenir LT Pro Book';
-                @include text-styles (16px, $black_color);
+                @include text-styles (16px, 'AvenirBook', $black_color);
                 line-height: 2.5;
             }
             .inside-box-ul{
                 .inside-box-a{
-                    font-family: 'Avenir LT Pro Book';
-                    @include text-styles (16px, $black_color);
+                    @include text-styles (16px, 'AvenirBook', $black_color);
                     line-height: 2.5;
                 }
             }
@@ -59,5 +60,6 @@
                 margin: 40px 0;
             }
         }
+    }
     }
 }
