--- a/scss/page/product-box.scss
+++ b/scss/page/product-box.scss
@@ -10,7 +10,7 @@
         .table-tbody{
             width: 100%;
             .table-th{
-                font-family: 'Avenir LT Pro 55 Heavy';
+                font-family: "AvenirHeavy";
                 .icon{
                     display: none;
                     @media screen and (max-width: 1080px) {
@@ -64,7 +64,7 @@
             }
             .table-tr{
                 display: flex;
-                justify-content: space-between;
+                @include horizontal (space-between);
                 border-bottom: 1px solid $gray_color;
                 padding-bottom: 32px;
                 padding-top: 29px;
@@ -91,8 +91,7 @@
                 .responsive-td{
                     display: none;
                 }
-                font-family: 'Avenir LT Pro 55 Heavy';
-                @include text-styles(16px, $gray_color);
+                @include text-styles(16px, 'AvenirHeavy', $gray_color);
                 @media screen and (max-width: 1080px) {
                     font-size: 10px;
                     .for-responsive{
