--- a/scss/page/base.scss
+++ b/scss/page/base.scss
@@ -4,6 +4,9 @@
     margin: 0 auto;
     display: flex;
 }
+.main{
+    margin-top: 120px;
+}
 .header-container{
     max-width: 1485px;
     width: 100%;
