--- a/scss/page/product-box.scss
+++ b/scss/page/product-box.scss
@@ -106,7 +106,7 @@
                 }
                 &:hover{
                     background-color: #E7E7E7;
-                    color: $black_color;
+                    color: $red_color;
                     border-radius: 10px;
                     padding: 29px 30px 32px 30px;
                     cursor: pointer;
