--- a/styles/style.css
+++ b/styles/style.css
@@ -679,6 +679,10 @@ a {
   border-radius: 50px;
   padding: 16px; }
 
+.profileImg-active {
+  border: 3px solid #FF2288;
+  border-radius: 50%; }
+
 .product-div {
   padding-top: 69px;
   padding-bottom: 61px; }
